add animation , upgrade style and other details
The animation of cards was added, the design was slightly changed, the function of checking for entering numbers was added.

--- a/index.html
+++ b/index.html
@@ -80,42 +80,42 @@
           <h2 class="heading">today's highlights</h2>
           <div class="cards">
             <div class="card2">
-              <h4 class="card-heading">УФ-индекс</h4>
+              <h4 class="card-heading">UV-Index</h4>
               <div class="content">
                 <p class="uv-index">0</p>
                 <p class="uv-text">Low</p>
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Скорость ветра</h4>
+              <h4 class="card-heading">Wind Speed</h4>
               <div class="content">
                 <p class="wind-speed">0</p>
-                <p>км/ч</p>
+                <p>km/h</p>
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Восход & Закат</h4>
+              <h4 class="card-heading">Sunrise & Sunset</h4>
               <div class="content">
                 <p class="sun-rise">0</p>
                 <p class="sun-set">0</p>
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Влажность</h4>
+              <h4 class="card-heading">Humidity</h4>
               <div class="content">
                 <p class="humidity">0</p>
                 <p class="humidity-status">Normal</p>
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Видимость</h4>
+              <h4 class="card-heading">Visibility</h4>
               <div class="content">
                 <p class="visibility">0</p>
                 <p class="visibility-status">Normal</p>
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Качество воздуха</h4>
+              <h4 class="card-heading">Air Quality</h4>
               <div class="content">
                 <p class="air-quality">0</p>
                 <p class="air-quality-status">Normal</p>
